Prefix fixing
Hardcoded prefixes verwijderd